----------------------------------------

General
* JDK 5.0 required for both building and running; for JDK 1.4 support use 1.2.x branch
* upgraded to Spring Framework 3.0
* upgraded to Equinox 3.4.3
* upgraded to Knopflerfish 2.3.0
* generified classes (both public and internal)
* the archetype project now saves locally the manifest generated during packaging

Package org.springframework.osgi.context
* improved serviceability by using NamedThreadLocal

Package org.springframework.osgi.compendium
* enhanced cm-properties to reflect Config Admin changes in the returned Properties object
* added new custom destruction callback to managed service factory objects

Package org.springframework.osgi.extender
* added JavaBean cache initialization for known types to reduce the number of class lookups

Package org.springframework.osgi.service
* improved serviceability by using NamedInheritableThreadLocal
* introduced support for dynamic service properties

Package org.springframework.osgi.mock
* added OSGi 4.2 methods to the package

Package org.springframework.osgi.util
* improved fallback mechanism for OSGi r4.1 features running in OSGi r4.0 platforms


Changes in version 1.2.0 final (2009-04-09)
-------------------------------------------

General
* improved web-console sample (added more documentation and bundles from the SpringSource Enterprise
Bundle Repository)
* updated archetype to support both Bundlor and Felix Bundle plugin
* increased Spring import range up to version 4

Package org.springframework.osgi.config
* fixed collection parsing bug that ignored inlined comparators during detection of ordered types
* improved definition of generated beans for better IDE integration

Package org.springframework.osgi.service
* fixed conversion of ServiceReferences in ServiceReferenceEditor
* improved error reporting for importer and exporter listeners configured with non-existing or incorrect custom methods