@@ -43,27 +43,20 @@ import org.springframework.util.StringUtils;
 /**
  * {@link Bundle} installer.
  * 
- * <p/>
- * This {@link FactoryBean} allows customers to use Spring to drive bundle
- * management. Bundles states can be modified using the <code>action</code>
- * (defaults to <em>start</em>) and <code>destroyAction</code> (not set by
+ * <p/> This {@link FactoryBean} allows customers to use Spring to drive bundle management. Bundles states can be
+ * modified using the <code>action</code> (defaults to <em>start</em>) and <code>destroyAction</code> (not set by
  * default) parameters.
  * 
- * <p/>
- * For example, to automatically install and start a bundle from the local maven
- * repository (assuming the bundle has been already retrieved), one can use the
- * following configuration:
+ * <p/> For example, to automatically install and start a bundle from the local maven repository (assuming the bundle
+ * has been already retrieved), one can use the following configuration:
  * 
- * <pre class="code"> &lt;osgi:bundle id=&quot;aBundle&quot;
- * symbolic-name=&quot;org.company.bundles.a&quot;
- * location=&quot;file:${localRepository
- * }/org/company/bundles/a/${pom.version}/a-${pom.version}.jar&quot;
+ * <pre class="code"> &lt;osgi:bundle id=&quot;aBundle&quot; symbolic-name=&quot;org.company.bundles.a&quot;
+ * location=&quot;file:${localRepository }/org/company/bundles/a/${pom.version}/a-${pom.version}.jar&quot;
  * action=&quot;start&quot;/&gt; </pre>
  * 
  * 
- * <p/>
- * <strong>Note:</strong> Pay attention when installing bundles dynamically
- * since classes can be loaded aggressively.
+ * <p/> <strong>Note:</strong> Pay attention when installing bundles dynamically since classes can be loaded
+ * aggressively.
  * 
  * @author Andy Piper
  * @author Costin Leau
@@ -90,7 +83,7 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 
 	private BundleContext bundleContext;
 
-	private BundleAction action, destroyAction;
+	private BundleActionEnum action, destroyAction;
 
 	private int startLevel;
 
@@ -98,7 +91,6 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 
 	/** unused at the moment */
 	private boolean pushBundleAsContextClassLoader = false;
-
 
 	// FactoryBean methods
 	public Class<? extends Bundle> getObjectType() {
@@ -137,20 +129,24 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 
 		if (log.isDebugEnabled())
 			log.debug("executing start-up action " + action);
-		executeAction(action);
+		if (action != null) {
+			executeAction(action);
+		}
 	}
 
 	public void destroy() throws Exception {
 		if (log.isDebugEnabled())
 			log.debug("executing shutdown action " + action);
 
-		executeAction(destroyAction);
+		if (destroyAction != null) {
+			executeAction(destroyAction);
+		}
 
 		bundle = null;
 		classLoader = null;
 	}
 
-	protected void executeAction(BundleAction action) {
+	protected void executeAction(BundleActionEnum action) {
 		ClassLoader ccl = Thread.currentThread().getContextClassLoader();
 		try {
 			if (pushBundleAsContextClassLoader) {
@@ -164,44 +160,48 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 
 				// Apply these actions only if we have a bundle, do not subsequently install a bundle
 				// if none exists
-				if (BundleAction.STOP == action) {
-					if (bundle != null) {
-						bundle.stop();
-					}
-				}
+				switch (action) {
 
-				else if (BundleAction.UNINSTALL == action) {
-					if (bundle != null) {
-						bundle.uninstall();
-					}
-				}
-				// Apply these actions and install a bundle if necessary
-				else if (BundleAction.INSTALL == action) {
+				case INSTALL:
 					bundle = installBundle();
-				}
+					break;
 
-				else if (BundleAction.START == action) {
+				case START:
 					if (bundle == null) {
 						bundle = installBundle();
 					}
 					bundle.start();
-				}
+					break;
 
-				else if (BundleAction.UPDATE == action) {
+				case UPDATE:
 					if (bundle == null) {
 						bundle = installBundle();
 					}
 					bundle.update();
-				}
-				// Default is to do nothing
 
-			}
-			catch (BundleException be) {
-				throw (RuntimeException) new IllegalStateException("cannot execute action " + action.getLabel()
+					break;
+
+				case STOP:
+					if (bundle != null) {
+						bundle.stop();
+					}
+					break;
+
+				case UNINSTALL:
+					if (bundle != null) {
+						bundle.uninstall();
+					}
+					break;
+
+				default:
+					// Default is to do nothing
+					break;
+				}
+			} catch (BundleException be) {
+				throw (RuntimeException) new IllegalStateException("cannot execute action " + action.name()
 						+ " on bundle " + OsgiStringUtils.nullSafeNameAndSymName(bundle)).initCause(be);
 			}
-		}
-		finally {
+		} finally {
 			if (pushBundleAsContextClassLoader) {
 				Thread.currentThread().setContextClassLoader(ccl);
 			}
@@ -227,8 +227,7 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 			InputStream stream = null;
 			try {
 				stream = resource.getInputStream();
-			}
-			catch (IOException ex) {
+			} catch (IOException ex) {
 				// catch it since we fallback on normal install
 				installBasedOnLocation = true;
 			}
@@ -243,8 +242,7 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 	}
 
 	/**
-	 * Find a bundle based on the configuration (don't apply any actions for
-	 * it).
+	 * Find a bundle based on the configuration (don't apply any actions for it).
 	 * 
 	 * @return a Bundle instance based on the configuration.
 	 */
@@ -260,8 +258,7 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 	}
 
 	/**
-	 * Return the {@link Resource} object (if a {@link ResourceLoader} is
-	 * available) from the given location (if any).
+	 * Return the {@link Resource} object (if a {@link ResourceLoader} is available) from the given location (if any).
 	 * 
 	 * @return {@link Resource} object for the given location
 	 */
@@ -314,8 +311,18 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 	 * Returns the action.
 	 * 
 	 * @return Returns the action
+	 * @deprecated As of Spring DM 2.0, replaced by {@link #getBundleAction()}
 	 */
 	public BundleAction getAction() {
+		return BundleAction.getBundleAction(action);
+	}
+
+	/**
+	 * Returns the bundle action.
+	 * 
+	 * @return the bundle action.
+	 */
+	public BundleActionEnum getBundleAction() {
 		return action;
 	}
 
@@ -323,8 +330,18 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 	 * Action to execute at startup.
 	 * 
 	 * @param action action to execute at startup
+	 * @deprecated As of Spring DM 2.0, replaced by {@link #setBundleAction(BundleAction)}
 	 */
 	public void setAction(BundleAction action) {
+		this.action = action.getBundleActionEnum();
+	}
+
+	/**
+	 * Action to execute at startup.
+	 * 
+	 * @param action action to execute at startup
+	 */
+	public void setBundleAction(BundleActionEnum action) {
 		this.action = action;
 	}
 
@@ -332,8 +349,17 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 	 * Returns the destroyAction.
 	 * 
 	 * @return Returns the destroyAction
+	 * @deprecated As of Spring DM 2.0, replaced by {@link #getBundleDestroyAction()}
 	 */
 	public BundleAction getDestroyAction() {
+		return BundleAction.getBundleAction(destroyAction);
+	}
+
+	/**
+	 * Returns the bundle destroy action.
+	 * @return
+	 */
+	public BundleActionEnum getBundleDestroyAction() {
 		return destroyAction;
 	}
 
@@ -341,8 +367,18 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 	 * Action to execute at shutdown.
 	 * 
 	 * @param action action to execute at shutdown
+	 * @deprecated As of Spring DM 2.0, replaced by {@link #setBundleDestroyAction(BundleActionEnum)}
 	 */
 	public void setDestroyAction(BundleAction action) {
+		this.destroyAction = action.getBundleActionEnum();
+	}
+
+	/**
+	 * Action to execute at shutdown.
+	 * 
+	 * @param action action to execute at shutdown
+	 */
+	public void setBundleDestroyAction(BundleActionEnum action) {
 		this.destroyAction = action;
 	}
 
@@ -365,12 +401,11 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 	}
 
 	/**
-	 * Determines whether invocations on the remote service should be performed
-	 * in the context (thread context class loader) of the target bundle's
-	 * ClassLoader. The default is <code>false</code>.
+	 * Determines whether invocations on the remote service should be performed in the context (thread context class
+	 * loader) of the target bundle's ClassLoader. The default is <code>false</code>.
 	 * 
-	 * @param pushBundleAsContextClassLoader true if the thread context class
-	 *        loader will be set to the target bundle or false otherwise
+	 * @param pushBundleAsContextClassLoader true if the thread context class loader will be set to the target bundle or
+	 * false otherwise
 	 */
 	public void setPushBundleAsContextClassLoader(boolean pushBundleAsContextClassLoader) {
 		this.pushBundleAsContextClassLoader = pushBundleAsContextClassLoader;
@@ -409,8 +444,7 @@ public class BundleFactoryBean implements FactoryBean<Bundle>, BundleContextAwar
 	}
 
 	/**
-	 * Set the backing bundle used by this class. Allows programmatic
-	 * configuration of already retrieved/created bundle.
+	 * Set the backing bundle used by this class. Allows programmatic configuration of already retrieved/created bundle.
 	 * 
 	 * @param bundle The bundle to set
 	 */
